*haveclip-0.14.0-r1 (21 Jan 2015)

  21 Jan 2015;  <aither@gentoo.org> +haveclip-0.14.0-r1.ebuild,
  -haveclip-0.14.0.ebuild, files/crypto.patch:
  HaveClip: support ~x86