@@ -1,5 +1,6 @@
 AUX crypto.patch 1271 SHA256 a065c9237097ba187edd128c7a23cf2bfd9c20ba3b08ba6422259abf448571e7 SHA512 179fae23884c93ee4c414d1f4f3cf83d668649204891d50c178adaeaa1b52d88326f0369dc3fe31bd45bf50988d198a287212dea78584373a87f88f0f1e424d6 WHIRLPOOL 6ff419e6e35aad4b03af096833f7e3f5afcc40b441603209fea48c3ef0fc6adfab86acccfe84a77155e60108868fa4b7137736af3e3987f7e6b2e1c5a2823661
 DIST haveclip-desktop-0.14.0-src.tar.gz 281370 SHA256 1059278558708d3fe59133a4e30892308eb34671809a5565d0e7d7f42dd222e6 SHA512 f6409b2b57eeb378850cb1ce145e219d41e895285c444545c22edfc6ec29094bd0d04f9b510dafa5ccba3131402d1dcefd131bf5983dd69c942295665fda85de WHIRLPOOL 5a9d7f7659b3377d451f7cc37b65101e9d41f7d946f45c800d7ead11690ba4b3655cca62b8b98e645b9a99ead70d8e1d632e0a3305f696557744c299de66940d
 EBUILD haveclip-0.14.0-r1.ebuild 641 SHA256 8f68e06229fea82a22733a9c6c3400b40e5ec0af8d12143d17f252f4380abd0b SHA512 04e880633c4a3d25504659b589d3ffce183dbd4043bbf538077aec486dd4ad20c197c3d01b94db099ed00b83ad75e18653403df0bce19e174488b941c99d247d WHIRLPOOL e57ec879bace2b6cf4c42da6cd60cbf48d50c9e28b1eeac24394d3b346f9563bad9f7081ed367a2ae7c9640f0049e35f74c1c08b8797918eda29022900d4772f
-MISC ChangeLog 171 SHA256 994c83e3d5679cdbbe107239e1dc0ba44c90ad381cd054e0fb2635d26f739d1d SHA512 836cb68332bd0ff16fd5a32773b8ed4a7f3fdf06755b5c9612afcbf4c8748d61066431f9f5548bb966e4eacf7b652ab92df33354947d37c0e1737ba224fcf1ab WHIRLPOOL 877135a948957dcc18207a582b693d54ae9d5b41b081ad31081f9984ec8d1385967abf728619d16c555c2be529c08459e10241517929a951b359d7eda46e1686
-MISC metadata.xml 200 SHA256 7c1aac0e90a39339bdededc2e5e5a8baadbd6e221be30121f9ef75e217ad7204 SHA512 df1cea5cfeb073f74eab94082cb02673fd0f87a363144f7a99ebc59b60085ef1c9c542d0cab5a126b034ca6c8d739967b00391f2bac74c06c19c95971a09720c WHIRLPOOL 6fa1643b18a359fee782411fe75868cb0cdf2571daff31413c5025914671bb40547effae90183fdea8c0e8765d9f3563649eaae48ae8eebd8b561b794974ce41
+EBUILD haveclip-9999.ebuild 610 SHA256 6d57bfac1619b83b7291a0b2173c869b1b3cab1da0fc93b0e575ab52710d47a5 SHA512 b8b72959728a08ef24d4e65f22b207689c7563119eee731f39655d27aa034afb7fa051d8273b2ba8aade391dfd6e4575268a14a9191c44acaf4c8e5a8a520e86 WHIRLPOOL 6a43ac6614df3cd00f34aed03a8ff4a0b2504545ac6d51018bd70c73e6d3df94b0e534eb746f6d2e8af3babb172d343174ffe8360110a8ab1c15235104905e0c
+MISC ChangeLog 354 SHA256 f9d6b8dda68cddb6f8901816d9170b1ceeb29f02a7b9521bcc43d3ae5cc22a61 SHA512 a27ef91ff332cd311a85070c109c91a6124f12167a4641a432c2d2622d3377612617a7965965d345272ce50403b6e14d7ea5948edc5f73766e5a8dde17f762b2 WHIRLPOOL 997769c6ff1cc05c4efcd047ae648d513fe765d0e2dcc278cbdcd9a075a2369462bb4089a5daacbee3ef98e7211953282120d56b2d42a8517732ecdd8ce609f7
+MISC metadata.xml 262 SHA256 d398d0e16fdb94eacae83d3e3261e59cc8946dd2b5acb421b1e4564a1b1ea513 SHA512 88a88554d1d97aaa67ea65107885d68230739397e9d91a5a31dcbc02a634b423824adaefccc81ae062c971cf01d1b9858a52e5ebcfb2dfe00540915d9c0bdac9 WHIRLPOOL 7f374705d98e2e26c7aa6d3db970445044f59c42a1ac89693935b90473d75e1edfd996bc3a9bc50bc955ec4d955fddfabdefefb7ff02deecc4bb7f7b52bcb881
